<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="eventHandler"
            type="com.creative.androidconcurrencyexamples.MainEventHandler" />

        <variable
            name="textByLiveData"
            type="String" />

        <variable
            name="textByStateFlow"
            type="String" />

        <variable
            name="textBySharedFlow"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="Navigate to Performance Compare"
                android:onClick="@{() -> eventHandler.onNavigatePerformanceCompare()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:text="Navigate to Backpressure Simulator"
                android:onClick="@{() -> eventHandler.onNavigateBackpressureSimulator()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/execute_task_using_thread"
                android:onClick="@{() -> eventHandler.onClickExecUsingThread()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/execute_task_using_thread_pool_executor"
                android:onClick="@{() -> eventHandler.onClickExecUsingThreadPool()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/execute_task_using_rxjava"
                android:onClick="@{() -> eventHandler.onClickExecUsingRxJava()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/execute_task_using_kotlin_coroutines"
                android:onClick="@{() -> eventHandler.onClickExecUsingCoroutines()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_view_by_livedata"
                android:textSize="16sp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                tools:text="@string/updater_by_livedata"
                android:text="@{textByLiveData}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_view_by_stateflow"
                android:textSize="16sp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                tools:text="@string/updater_by_stateflow"
                android:text="@{textByStateFlow}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_view_by_sharedflow"
                android:textSize="16sp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                tools:text="@string/updater_by_sharedflow"
                android:text="@{textBySharedFlow}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
